# Saas-project

./: .gitignore  main.py  pyproject.toml  test.py  test_agent_endpoint.py
Backend/: .gitignore  main.py  pyproject.toml  start_celery_worker.py  test_models.py
Backend/alembic/: env.py
Backend/alembic/versions/: 1acda7efc951_int.py  55de9f209b8c_fix_database_schema.py  ad7b577c552d_init.py  c68fd2d05b59_init.py  cc3282b92c43_init.py
Backend/app/configs/: config.py  database.py
Backend/app/controllers/: __init__.py  agent_controller.py  auth_controller.py  company_information_controller.py  customer_service_controller.py  dashboard_controller.py  document_controller.py  history_controllers.py  integration_controller.py  platform_controller.py  simple_rag_controller.py  user_controller.py
Backend/app/core/: context.py  factory.py
Backend/app/dependencies/: auth.py  redis_storage.py
Backend/app/docs/: error_handling_pattern.md
Backend/app/events/: event_handler.py  handlers.py  loop_manager.py  redis_event.py
Backend/app/examples/: error_handling_example.py
Backend/app/exceptions/: __init__.py  agent_exceptions.py  auth_exceptions.py  database_exceptions.py  user_exceptions.py
Backend/app/middlewares/: RBAC.py  auth_middleware.py  context_middleware.py  error_handler.py
Backend/app/models/: __init__.py
Backend/app/repository/: agent_repository.py  user_repository.py
Backend/app/routes/: agent_route.py  auth_route.py  company_information_route.py  customer_service_route.py  (+8 more)
Backend/chroma_db/: chroma.sqlite3
Backend/data/: chroma.sqlite3
(+360 files in other folders)
